feat(iam): implement Phase 3 pluggable authentication, security filter, and Javadoc standards
- Implement AuthenticationProvider SPI, AuthenticationProviderRouter, LocalPasswordAuthProvider (BCrypt), OidcAuthProvider, and ApiKeyAuthProvider
- Implement FederatedIdentityService for JIT provisioning and external IdP group claim mapping
- Implement IAM JPA persistence entities, repositories, and domain adapters (User, UserIdentity, Role, Group, UserGroupMembership, UserRoleAssignment, GroupRoleAssignment, ScopeNode)
- Implement EffectiveAccessResolver for composite role, permission, and hierarchical scope calculation
- Implement JwtTokenProvider, SecurityContextCurrentActor, SecurityContextAccessor with Java 25 ScopedValue, and JwtAuthenticationFilter
- Implement AuthenticateUserUseCase, AuthenticationService, AuthController (/login, /refresh, /me), and IamExceptionHandler (RFC 7807)
- Add Section 9 to clean-code rules for mandatory Javadoc documentation standards across all types and methods
- Add complete Javadocs across all IAM domain, application, adapter, and config components
- Add comprehensive unit test suite covering all persistence adapters, services, providers, filters, and controllers